--- a/.gitattributes
+++ b/.gitattributes
@@ -33,3 +33,24 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
+PP-DocLayoutV2/inference.pdiparams filter=lfs diff=lfs merge=lfs -text
+PP-DocLayoutV2/inference.pdmodel filter=lfs diff=lfs merge=lfs -text
+PaddleOCR-VL-0.9B/tokenizer.json filter=lfs diff=lfs merge=lfs -text
+imgs/allmetric.png filter=lfs diff=lfs merge=lfs -text
+imgs/chart_01.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/chart_02.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/formula_EN.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/inhouseocr.png filter=lfs diff=lfs merge=lfs -text
+imgs/inhousetable.png filter=lfs diff=lfs merge=lfs -text
+imgs/omni10.png filter=lfs diff=lfs merge=lfs -text
+imgs/omni15.png filter=lfs diff=lfs merge=lfs -text
+imgs/omnibenchocr.png filter=lfs diff=lfs merge=lfs -text
+imgs/overview1.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/overview2.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/overview3.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/overview4.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/paddleocrvl.png filter=lfs diff=lfs merge=lfs -text
+imgs/table_01.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/table_02.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/text_english_arabic.jpg filter=lfs diff=lfs merge=lfs -text
+imgs/text_handwriting_02.jpg filter=lfs diff=lfs merge=lfs -text
